2010-08-29 S. Thiell <stephane.thiell@cea.fr>

	* Task.py: Add docstring for timer's autoclose feature (trac ticket #109).

	* Worker/Worker.py: Attribute 'last_errmsg' not properly initialized (trac
	ticket #107).

	* setup.py: Switch to setuptools.

    * clustershell.spec.in: Fix issue on el5 with if condition when defining
	python_sitelib.

2010-08-26 S. Thiell <stephane.thiell@cea.fr>

	* Packaging automation engineering and improved specfile.

	* License files converted to UTF-8.

2010-07-27 S. Thiell <stephane.thiell@cea.fr>

	* Version 1.3 released.

2010-07-21 S. Thiell <stephane.thiell@cea.fr>

	* Version 1.3 RC 2 released.

	* NodeSet.py: Like in some previous version, support None as argument for
	most methods (trac ticket #106).

2010-07-16 S. Thiell <stephane.thiell@cea.fr>

	* scripts/clush.py: Fix uncaught exceptions introduced in 1.3 RC 1 (trac
	ticket #105).

2010-07-12 S. Thiell <stephane.thiell@cea.fr>

	* Version 1.3 RC 1 released.

	* Task.py: Raise proper KeyError exception in Task.key_retcode(key) when
	key is not found in any finished workers (trac ticket #102).

2010-07-06 S. Thiell <stephane.thiell@cea.fr>

	* Task.py: Added documentation for reserved set_default() and set_info()
	keys (trac ticket #101).

	* scripts/clubak.py: Merge latest code display changes made on clush to
	clubak, including "--color={never,always,auto}" (trac ticket #89). Updated
	documentation accordingly.

2010-06-29 H. Doreau <henri.doreau@gmail.com>

	* Worker/Pdsh.py: removed obsolete _read() and _readerr() methods that
	overrode EngineClient methods without raising an EOFException when
	read() reads nothing (trac ticket #97).

2010-06-28 S. Thiell <stephane.thiell@cea.fr>

	* scripts/clush.py: Centralized handling of exceptions raised from Main
	and separate Task thread because some exceptions handled only in Main
	thread were not caught (fix btw trac ticket #93).

2010-06-17 S. Thiell <stephane.thiell@cea.fr>

	* Version 1.3 beta 6 released.
